Align Okta SAML instructions

--- a/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
@@ -42,7 +42,7 @@ Setup requires:
 
 ### Step 2. Create an Entra ID app registration
 
-1. Once you reach **Step 2: Your IdP and Apollo** in the wizard, go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
+1. Once you reach **Step 2: Configure Your IdP** in the wizard, go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
 2. In Entra, go to **Identity > Applications > App registrations**. If accessing Entra from the Azure Portal, go to **Manage > App registrations**. Select **+New registration** in the top menu.
 3. On the **Register an application** page, provide the following information:
 
