--- a/src/content/graphos/org/sso/self-service/oidc-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-okta.mdx
@@ -35,7 +35,7 @@ Setup requires:
 
 ### Step 2. Create a custom Okta app integration
 
-1. Once you reach **Step 2: Your IdP and Apollo** in the wizard, open your Okta Administrator Dashboard in a separate browser tab.
+1. Once you reach **Step 2: Configure Your IdP** in the wizard, open your Okta Administrator Dashboard in a separate browser tab.
 2. In your Okta Administrator Dashboard, go to the **Applications** view and click **Create App Integration**.
 
    <Note>
