--- a/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
@@ -37,7 +37,7 @@ Setup requires:
 
 ### Step 2. Create a custom application
 
-1. Once you reach **Step 2: Your IdP and Apollo** in the wizard, open your IdP's admin dashboard in a separate browser tab.
+1. Once you reach **Step 2: Configure Your IdP** in the wizard, open your IdP's admin dashboard in a separate browser tab.
 2. Create a new application. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
