--- a/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
@@ -35,7 +35,7 @@ Setup requires:
 
 ### Step 2. Create an Entra ID enterprise application
 
-1. Once you reach **Step 2: Your IdP and Apollo** in the wizard, go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
+1. Once you reach **Step 2: Configure Your IdP** in the wizard, go to your [Microsoft Entra admin center](https://entra.microsoft.com/). Alternatively, you can sign in to the [Azure Portal](http://portal.azure.com/) and then go to **Microsoft Entra ID**.
 2. Go to **Identity > Applications > Enterprise applications** and select **+New application** in the top menu.
 3. In the top menu, select **+Create your own application**.
 4. Enter `Apollo GraphOS` as the name of your app. Below, keep the **Integrate any other application you don't find in the gallery (Non-gallery)** option selected. Click **Create**.
