Edit migration and availability guide

--- a/src/content/graphos/org/sso/self-service/availability.mdx
+++ b/src/content/graphos/org/sso/self-service/availability.mdx
@@ -13,7 +13,7 @@ To confirm if you can use self-service SSO, visit [GraphOS Studio](https://studi
   width="700"
 />
 
-## Non self-service setup
+## Non-self-service setup
 
 If you don't see the migration banner, you can't use the self-service setup and must use these instructions to set up your SSO:
 
