--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -4,7 +4,18 @@ subtitle: Learn who needs to migrate, what's changing, and how to migrate
 noIndex: true
 ---
 
-GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024. After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
+As of August 1, 2024, GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024.
+After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
+
+## What's changing?
+
+In April 2024, Apollo introduced a new SSO system directly integrated into the GraphOS authentication service, eliminating the need for a third-party dependency (PingOne).
+With this new implementation, you no longer need to perform the annual certification rotations that PingOne requires.
+
+In August 2024, Apollo created a mechanism for existing customers on the legacy system to migrate to the new system in a self-service manner without needing to contact Apollo support to complete setup.
+Migrating customers are always welcome to reach out to [support@apollographql.com](mailto:support@apollographql.com) in case of questions.
+
+Later in 2024, new customers will have access to the self-service system.
 
 ## Who needs to migrate?
 
@@ -20,13 +31,10 @@ To confirm if you need to migrate, visit [GraphOS Studio](https://studio.apollog
 
 If you aren't sure whether you need to migrate, please reach out to your Apollo contact.
 
-## What's changing?
-
-The new SSO implementation is now directly integrated into the GraphOS authentication service, eliminating the need for a third-party dependency (PingOne). With this new implementation, you no longer need to perform the annual certification rotations that PingOne requires.
-
 ## How to migrate
 
-To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration. For details, see the instructions for your identity provider:
+A GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration to migrate.
+For details, see the instructions for your identity provider:
 
 #### SAML-based
 
@@ -40,4 +48,4 @@ To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) mu
 - [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
 - [Generic OIDC](./oidc-integration-guide/)
 
-Don't hesitate to reach out to your Apollo contact email [support@apollographql.com](mailto:support@apollographql.com) if you have any questions or need assistance.
+Don't hesitate to email [support@apollographql.com](mailto:support@apollographql.com) if you have any questions or need assistance.
