Move up prereqs

--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -20,6 +20,13 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 
 <SSOMigrationNotice />
 
+## Prerequisites
+
+Setup requires:
+
+- Administrative access to your IdP
+- A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+
 ## Setup
 
 OIDC-based SSO setup has these steps:
@@ -30,13 +37,6 @@ OIDC-based SSO setup has these steps:
 1. Enable SSO in GraphOS Studio.
 
 The SSO setup wizard in GraphOS Studio guides you through these steps.
-
-### Prerequisites
-
-Setup requires:
-
-- Administrative access to your IdP
-- A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
 
 <!-- vale Apollo.Headings = NO -->
 
