--- a/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
@@ -16,6 +16,13 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 <SSOMigrationNotice />
 
+## Prerequisites
+
+Setup requires:
+
+- An Entra ID user account with at least the [Cloud Application Administrator](https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/permissions-reference#cloud-application-administrator) role
+- A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+
 ## Setup
 
 OIDC-based SSO setup in Entra ID has these steps:
@@ -26,13 +33,6 @@ OIDC-based SSO setup in Entra ID has these steps:
 1. Enable SSO in GraphOS Studio.
 
 The SSO setup wizard in GraphOS Studio guides you through these steps.
-
-### Prerequisites
-
-Setup requires:
-
-- An Entra ID user account with at least the [Cloud Application Administrator](https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/permissions-reference#cloud-application-administrator) role
-- A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
 
 <!-- vale Apollo.Headings = NO -->
 
