--- a/src/content/graphos/org/sso/self-service/oidc-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-okta.mdx
@@ -16,16 +16,16 @@ This guide walks through configuring Okta as your GraphOS organization's identit
 
 <SSOMigrationNotice />
 
-## Setup
-
-<SSOSetupSteps type="OIDC" idp="Okta app integration" />
-
-### Prerequisites
+## Prerequisites
 
 Setup requires:
 
 - An Okta user account with administrator privileges
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+
+## Setup
+
+<SSOSetupSteps type="OIDC" idp="Okta app integration" />
 
 <!-- vale Apollo.Headings = NO -->
 
