--- a/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
@@ -18,16 +18,16 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 - [Okta](./saml-okta)
 - [Microsoft Entra ID](./saml-microsoft-entra-id) (formerly known as Azure Active Directory)
 
-## Setup
-
-<SSOSetupSteps type="SAML" idp="application" />
-
-### Prerequisites
+## Prerequisites
 
 Setup requires:
 
 - Administrative access to your IdP
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+
+## Setup
+
+<SSOSetupSteps type="SAML" idp="application" />
 
 <!-- vale Apollo.Headings = NO -->
 
