--- a/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
@@ -16,16 +16,16 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 <SSOMigrationNotice />
 
-## Setup
-
-<SSOSetupSteps type="SAML" idp="Entra ID enterprise application" />
-
-### Prerequisites
+## Prerequisites
 
 Setup requires:
 
 - An Entra ID user account with at least the [Cloud Application Administrator](https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/permissions-reference#cloud-application-administrator) role
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+
+## Setup
+
+<SSOSetupSteps type="SAML" idp="Entra ID enterprise application" />
 
 <!-- vale Apollo.Headings = NO -->
 
