--- a/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
@@ -43,7 +43,7 @@ Setup requires:
    - **App Name**: `Apollo GraphOS`
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
-3. If your IdP permits it, upload the SP SAML XML metadata file provided by the GraphOS setup wizard. Otherwise, open the XML metadata file, view the SAML metadata values, and manually enter them in your IdP.
+3. If your IdP permits it, upload the SAML XML metadata file provided by the GraphOS setup wizard. Otherwise, manually enter the following metadata values in your IdP:
 
    - Set your **Single Sign-on URL** or **ACS URL** to the Single Sign-on URL provided by the wizard. You can also use this value for the following fields:
 
@@ -61,23 +61,27 @@ Setup requires:
    - `given_name`: Your IdP's first name attribute, often something like `user.firstName`
    - `family_name`: Your IdP's last name attribute,often something like `user.lastName`
 
-5. Save your configuration.
-6. In the setup wizard in GraphOS Studio, select whether your IdP requires signing an AuthnRequest.
-7. Click **Continue**.
+5. Save the configuration in your IdP.
+6. In the GraphOS setup wizard, select whether your IdP requires signing an AuthnRequest.
+7. Click **Next**.
 
 ### Step 3. Share SAML metadata with Apollo
 
-In the setup wizard, enter your application's metadata URL or metadata file.
+In the GraphOS setup wizard, enter your application's metadata URL or metadata file.
 Consult your IdP's documentation if you need assistance finding it.
-Click **Continue**.
+Click **Next**.
 
 ### Step 4. Verify details
 
 The GraphOS Studio setup wizard populates your SSO metadata based on the URL you entered in the last step. Verify the values are correct. Consult your IdP's documentation if you need assistance finding them.
 
-Once you've verified the values or corrected them, click **Continue**.
+Once you've verified the values or corrected them, click **Next**.
 
-### Step 5. Enable SSO
+### Step 5. Verify SSO Configuration
+
+<SSOVerification />
+
+### Step 6. Enable SSO
 
 <!-- vale Apollo.Headings = YES -->
 
