--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -111,7 +111,7 @@ Setup requires:
 
 ### Step 4. Verify details
 
-The GraphOS Studio setup wizard populates your SSO metadata based on the URL you entered in the last step. In this step, you verify the values are correct.
+The GraphOS Studio setup wizard populates your SSO metadata based on the URL you entered in the last step. Verify the values are correct.
 
 You can find your **EntityID** and **SSO URL** in your Okta Administrator Dashboard in the app integration you created for GraphOS.
 
@@ -129,8 +129,7 @@ Once you've verified the values or corrected them, click **Next**.
 
 ### Step 5. Verify SSO Configuration
 
-To verify that your SSO configuration works, click **Login with new SSO** in the GraphOS Studio wizard.
-This button launches a new login session in a new browser tab. Once you successfully login using your new configuration, click **Next**.
+<SSOVerification />
 
 ### Step 6. Enable SSO
 
