--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -57,4 +57,4 @@ They will then be able to complete your SSO setup.
 
 Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
 
-<SSOLegacyUsers />
+<SSONewUsers />
