Update Okta OIDC guide

--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -34,7 +34,7 @@ These steps generally require administrative access to your IdP.
 2. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
+   - **Logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
 3. Retrieve the following values from your SSO provider and save them in a local text file:
 
