--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -31,8 +31,8 @@ To use the latest version of Apollo's SSO, ensure you are _creating a custom app
 3. In the dialog that appears, select **SAML 2.0** as your sign-in method. Click **Next**.
 4. The **Create SAML Integration** dialog appears. In the **General Settings** step, provide the following values:
 
-   - **App name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
+   - **App integration name**: `Apollo GraphOS`
+   - **Logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
 
    <img
      src="../../img/sso/okta-create-saml-integration.jpg"
