--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -50,7 +50,7 @@ The SSO setup wizard in GraphOS Studio guides you through these steps.
 2. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.png) (optional)
+   - **Logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.png) (optional)
 
 3. Retrieve the following values from your SSO provider and enter them in the setup wizard.
 
