--- a/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-integration-guide.mdx
@@ -41,7 +41,7 @@ Setup requires:
 2. Create a new application. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
+   - **Logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
 3. If your IdP permits it, upload the SAML XML metadata file provided by the GraphOS setup wizard. Otherwise, manually enter the following metadata values in your IdP:
 
