--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -55,8 +55,8 @@ Setup requires:
 
 4. The **Create SAML Integration** dialog appears. In the **General Settings** step, provide the following values:
 
-   - **App name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.jpg) (optional)
+   - **App integration name**: `Apollo GraphOS`
+   - **Logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.jpg) (optional)
 
    <img
      src="../../../img/sso/okta-create-saml-integration.jpg"
