--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -28,7 +28,7 @@ These steps generally require administrative access to your IdP.
 2. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.png) (optional)
+   - **Logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.png) (optional)
 
 3. If your IdP permits it, upload the Apollo-provided SP SAML XML metadata file. Otherwise, open the XML metadata file, view the SAML metadata values, and manually enter them in your IdP.
 
