--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -29,14 +29,7 @@ Setup requires:
 
 ## Setup
 
-OIDC-based SSO setup has these steps:
-
-1. Enter your SSO details in GraphOS Studio.
-1. Create an application for GraphOS in your IdP.
-1. Configure OIDC to work with GraphOS.
-1. Enable SSO in GraphOS Studio.
-
-The SSO setup wizard in GraphOS Studio guides you through these steps.
+<SSOSetupSteps type="OIDC" idp="application" />
 
 <!-- vale Apollo.Headings = NO -->
 
