--- a/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-microsoft-entra-id.mdx
@@ -25,12 +25,7 @@ Setup requires:
 
 ## Setup
 
-OIDC-based SSO setup in Entra ID has these steps:
-
-1. Enter your SSO details in GraphOS Studio.
-1. Create an app registration for GraphOS in Entra ID.
-1. Configure API permissions in Entra ID.
-1. Enable SSO in GraphOS Studio.
+<SSOSetupSteps type="OIDC" idp="Entra ID enterprise application" />
 
 The SSO setup wizard in GraphOS Studio guides you through these steps.
 
