--- a/src/content/graphos/org/sso/self-service/oidc-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-okta.mdx
@@ -58,7 +58,7 @@ Setup requires:
    - **App integration name**: `Apollo GraphOS`
    - **Logo**: [Apollo logo](../../../img/sso/apollo-sk-logo.jpg) (optional)
 
-   Leave the other fields (for example, Proof of possesion, Grant type) as the default values.
+   Leave the other fields (for example, Proof of possession, Grant type) as the default values.
 
 5. Add the following URIs:
 
