--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -107,7 +107,7 @@ Setup requires:
      width="500"
    />
 
-2. Copy and paste the contents of the **Metadata URL** text box into the setup wizard in GraphOS Studio. Once the wizard shows the green success banner that says **Sucessfully parsed SAML metadata**, click **Next**.
+2. Copy and paste the contents of the **Metadata URL** text box into the setup wizard in GraphOS Studio. Once the wizard shows the green success banner that says **Successfully parsed SAML metadata**, click **Next**.
 
 ### Step 4. Verify details
 
