--- a/src/content/graphos/org/sso/self-service/availability.mdx
+++ b/src/content/graphos/org/sso/self-service/availability.mdx
@@ -17,9 +17,13 @@ To confirm if you can use self-service SSO, visit [GraphOS Studio](https://studi
 
 If you don't see the migration banner, you can't use the self-service setup and must use these instructions to set up your SSO:
 
+#### SAML-based
+
 - [Okta](../okta-integration-guide/) (SAML-based)
-- Microsoft Entra ID (formerly known as Azure Active Directory)
-  - [SAML-based](../microsoft-entra-id-integration-saml-guide)
-  - [OIDC-based](../microsoft-entra-id-integration-oidc-guide)
+- [Microsoft Entra ID](../microsoft-entra-id-integration-saml-guide) (formerly known as Azure Active Directory)
 - [Generic SAML](../saml-integration-guide/)
+
+#### OIDC-based
+
+- [Microsoft Entra ID](../microsoft-entra-id-integration-oidc-guide) (formerly known as Azure Active Directory)
 - [Generic OIDC](../oidc-integration-guide/)
