--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -53,7 +53,8 @@ Setup requires:
 
 ### Step 3. Configure OIDC to work with Apollo
 
-If your IdP permits it, set the following user attributes:
+1. Verify that the **Sign-in Redirect URL** in your application matches the one shown in the GraphOS wizard.
+2. If your IdP permits it, set the following user attributes:
 
 - `sub`: `user.email`
   - The `sub` attribute should uniquely identify any particular user to GraphOS. In most cases, `user.email` or `user.mail` provides this unique mapping.
@@ -61,7 +62,13 @@ If your IdP permits it, set the following user attributes:
 - `given_name`: Your IdP's first name attribute, often something like `user.firstName`
 - `family_name`: Your IdP's last name attribute,often something like `user.lastName`
 
-### Step 4. Enable SSO
+3. Save this configuration in your IdP and click **Next** in the GraphOS wizard.
+
+### Step 4. Verify SSO Configuration
+
+<SSOVerification />
+
+### Step 5. Enable SSO
 
 <!-- vale Apollo.Headings = YES -->
 
