--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -20,6 +20,13 @@ Later in 2024, new customers will have access to the self-service system.
 ## Who needs to migrate?
 
 If your organization implemented SSO before April 2024, you must migrate.
+
+<Note>
+
+If your organization implemented SSO after April 2024, but before the availability of self-service setup, you _don't_ need to migrate.
+
+</Note>
+
 To confirm if you need to migrate, visit [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and check for an SSO migration banner.
 
 <img
