--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -12,7 +12,7 @@ After that date, the legacy implementation will no longer work, and your organiz
 In April 2024, Apollo introduced a new SSO system directly integrated into the GraphOS authentication service, eliminating the need for a third-party dependency (PingOne).
 With this new implementation, you no longer need to perform the annual certification rotations that PingOne requires.
 
-In August 2024, Apollo created a mechanism for existing customers on the legacy system to migrate to the new system in a self-service manner without needing to contact Apollo support to complete setup.
+In August 2024, Apollo introduced a self-service migration mechanism for legacy customers to transition to the new system without needing to contact Apollo support.
 Migrating customers are always welcome to reach out to [support@apollographql.com](mailto:support@apollographql.com) in case of questions.
 
 Later in 2024, new customers will have access to the self-service system.
