--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -4,7 +4,7 @@ subtitle: Learn who needs to migrate, what's changing, and how to migrate
 noIndex: true
 ---
 
-As of August 1, 2024, GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024.
+As of August 2024, GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizations that set up their SSO with the legacy implementation must migrate before November 15, 2024.
 After that date, the legacy implementation will no longer work, and your organization will lose access to GraphOS.
 
 ## What's changing?
