--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -16,7 +16,7 @@ This guide walks through configuring Okta as your GraphOS organization's identit
 
 <SSOMigrationNotice />
 
-### Prerequisites
+## Prerequisites
 
 Setup requires:
 
